--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,42 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Products
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="search-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Products</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6" *ngFor="let product of products">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ product.product_name }}</ion-card-title>
+          </ion-card-header>
+          <!-- <ion-img [src]="product.image_url" alt="Product Image"></ion-img> -->
+          <ion-card-content>
+            <p>{{ product.product_description }}</p>
+            <p>Price: {{ product.product_price | currency }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-text color="medium" class="ion-text-center" *ngIf="products.length === 0">
+    <p>No products available.</p>
+  </ion-text>
 </ion-content>
+
