--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,64 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title>Dashboard</ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="search-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Dashboard</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-card *ngIf="users.length > 0">
+    <ion-card-header>
+      <ion-card-title>User List</ion-card-title>
+      <ion-card-subtitle>{{ users.length }} users found</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" size-sm="6" *ngFor="let user of users">
+          <ion-item class="user-item">
+            <ion-avatar slot="start">
+              <img [src]="user.avatar || 'assets/draw1.jpeg'" alt="User avatar">
+            </ion-avatar>
+            <ion-label>
+              <h2 class="user-name">{{ user.first_name }} {{ user.last_name }}</h2>
+              <p class="user-email">
+                <ion-icon name="mail-outline"></ion-icon>
+                {{ user.email }}
+              </p>
+              <p class="user-phone">
+                <ion-icon name="call-outline"></ion-icon>
+                {{ user.phone_number }}
+              </p>
+            </ion-label>
+            <ion-button fill="clear" slot="end">
+              <ion-icon slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
+
+  <ion-card *ngIf="users.length === 0" class="ion-text-center">
+    <ion-card-header>
+      <ion-card-title>No Users Found</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-icon name="people-outline" class="large-icon"></ion-icon>
+      <p>There are no users available at the moment.</p>
+      <ion-button expand="block" fill="outline" class="ion-margin-top">
+        Add New User
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
