--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -25,7 +25,7 @@
           <ion-card-header>
             <ion-card-title>{{ product.product_name }}</ion-card-title>
           </ion-card-header>
-          <!-- <ion-img [src]="product.image_url" alt="Product Image"></ion-img> -->
+          <ion-img [src]="product.image_url" alt="Product Image"></ion-img>
           <ion-card-content>
             <p>{{ product.product_description }}</p>
             <p>Price: {{ product.product_price | currency }}</p>
