--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -28,7 +28,7 @@
           <ion-img [src]="product.image_url" alt="Product Image"></ion-img>
           <ion-card-content>
             <p>{{ product.product_description }}</p>
-            <p>Price: {{ product.product_price | currency }}</p>
+            <p>Price: ₹{{ product.product_price }}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
